<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<group android:checkableBehavior="none">
		<item
			android:enabled="false"
			android:title="@string/home_nav_section_emulation"
			android:visible="false" />
		<item
			android:id="@+id/menu_boot_bios"
			android:icon="@drawable/ic_cd_24"
			android:title="@string/home_nav_boot_bios"
			android:visibility="gone"
			android:visible="false" />

		<item
			android:id="@+id/menu_manage_bios"
			android:icon="@drawable/ic_cd_24"
			android:title="@string/home_nav_bios"
			android:visibility="visible"
			android:visible="false" />

		<item
			android:id="@+id/menu_run_elf"
			android:icon="@drawable/ic_folder_24"
			android:title="@string/settings_run_elf"
			android:visibility="gone"
			android:visible="false" />

		<item
			android:enabled="false"
			android:title="@string/home_nav_section_library"
			android:visible="false" />
		<item
			android:id="@+id/menu_choose_folder"
			android:icon="@drawable/ic_folder_24"
			android:title="@string/home_nav_choose_games_folder"
			android:visibility="gone"
			android:visible="false" />
		<item
			android:id="@+id/menu_refresh"
			android:icon="@drawable/ic_refresh_24"
			android:title="@string/home_nav_refresh_games" />
		<item
			android:id="@+id/menu_covers"
			android:icon="@drawable/ic_image_24"
			android:title="@string/home_nav_covers"
			android:visible="false" />
		<item
			android:id="@+id/menu_clear_cover_url"
			android:icon="@drawable/ic_refresh_24"
			android:title="@string/home_nav_remove_cover_url"
			android:visible="false" />

		<item
			android:enabled="false"
			android:title="@string/home_nav_section_background"
			android:visible="false" />
		<item
			android:id="@+id/menu_bg_landscape"
			android:icon="@drawable/ic_image_24"
			android:title="@string/home_nav_choose_landscape_background"
			android:visibility="gone"
			android:visible="false" />
		<item
			android:id="@+id/menu_bg_portrait"
			android:icon="@drawable/ic_image_24"
			android:title="@string/home_nav_choose_portrait_background"
			android:visibility="gone"
			android:visible="false" />
		<item
			android:id="@+id/menu_bg_clear"
			android:icon="@drawable/ic_refresh_24"
			android:title="@string/home_nav_clear_background"
			android:visible="false" />

		<item
			android:enabled="false"
			android:title="@string/home_nav_section_settings"
			android:visible="false" />
		<item
			android:id="@+id/menu_open_settings"
			android:icon="@drawable/ic_settings_24"
			android:title="@string/drawer_settings" />
	</group>
</menu>
